# uxweaver

./: README.md  frontend.py  pyproject.toml  test.py  test2.py
DATABASE/: Activities  demo.js  demo.py  frontend.py  sam.txt  sample.json  samplejson.py  sm.txt  task_management.db  travel_site_structure  view.py
DATABASE/d3/ia-tree-app/: package-lock.json  package.json
DATABASE/d3/ia-tree-app/src/: App.js  IAViewer.jsx
DATABASE/d3/viz/: final.html  index.html  indexq.html  script.js  styles.css
src/uxweaver_flow/: main.py
src/uxweaver_flow/crews/uxweaver_crew/: instructions_crew.py
src/uxweaver_flow/crews/uxweaver_crew/config/: demo_agents.yaml  demo_tasks.yaml  ia_developer_agents.yaml  ia_developer_tasks.yaml  manager_agents.yaml  manager_tasks.yaml  team_leader_agents.yaml  team_leader_tasks.yaml  uf_developer_agents.yaml  uf_developer_tasks.yaml
src/uxweaver_flow/tools/: extract_conversation_from_slack.py
