[project]
name = "uxweaver_flow"
version = "0.1.0"
description = "uxweaver_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "uxweaver_flow.main:kickoff"
run_crew = "uxweaver_flow.main:kickoff"
plot = "uxweaver_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
